# learnOpenGl

./: .gitignore  LearnOpenGl.sln  cmakeall.cmd
LearnOpenCV/core/: CMakeLists.txt  LearnOpenCV.cpp  LearnOpenCV.h  Main.cpp  Main.h
LearnOpenCV/core/Core/: AutoreleasePool.cpp  AutoreleasePool.h  Camera.cpp  Camera.h  CameraManager.cpp  CameraManager.h  CameraMoveComponent.cpp  CameraMoveComponent.h  Component.cpp  Component.h  Core.h  CoreDef.h  DirLight.cpp  DirLight.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  GlobalDictionary.cpp  GlobalDictionary.h  Model.cpp  Model.h  Object.cpp  Object.h  ObjectManager.cpp  ObjectManager.h  Ref.cpp  Ref.h  RenderInterface.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  ShowFpsComponent.cpp  ShowFpsComponent.h  SkyBox.cpp  SkyBox.h  TestComponent.cpp  TestComponent.h  Transform.cpp  (+4 more)
LearnOpenCV/core/Util/: StringUtil.h
LearnOpenCV/core/event/: Event.cpp  Event.h  EventCustom.cpp  EventCustom.h  EventDispatcher.cpp  EventDispatcher.h  EventFocus.cpp  EventFocus.h  EventKeyboard.cpp  EventKeyboard.h  EventListener.cpp  EventListener.h  EventListenerController.cpp  EventListenerCustom.cpp  EventListenerCustom.h  EventListenerFocus.cpp  EventListenerFocus.h  EventListenerKeyboard.cpp  EventListenerKeyboard.h  EventListenerMouse.cpp  EventListenerMouse.h  EventListenerTouch.cpp  EventListenerTouch.h  EventMouse.cpp  EventMouse.h  EventTouch.cpp  EventTouch.h
LearnOpenCV/core/file/: FilePathManager.h  Image.cpp  Image.h  ImageLoad.cpp  ImageLoad.h
LearnOpenCV/core/input/: Input.cpp  Input.h
LearnOpenCV/core/logic/renderQueue/: RenderOpaqueQueue.cpp  RenderOpaqueQueue.h
LearnOpenCV/core/lua/: LuaRegister.cpp  LuaRegister.h
LearnOpenCV/core/math/: AABB.cpp  AABB.h  Base.cpp  Base.h  Math.h  Matrix3.cpp  Matrix3.h  Matrix4.cpp  Matrix4.h  Obb.cpp  Obb.h  Quaternion.cpp  Quaternion.h  Triangle.cpp  Triangle.h  UVector2.cpp  UVector2.h  Vector1.cpp  Vector1.h  Vector2.cpp  Vector2.h  Vector2T.cpp  Vector2T.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
LearnOpenCV/core/meshModel/: ABaseMesh.cpp  ABaseMesh.h  AMesh.cpp  AMesh.h  AModel.cpp  AModel.h  AUIMesh.cpp  AUIMesh.h
LearnOpenCV/core/opengl/: GLShader.cpp  GLShader.h  GLShaderManager.cpp  GLShaderManager.h  OpenGLCore.cpp  OpenGLCore.h
LearnOpenCV/core/render/: BlendFunc.cpp  BlendFunc.h  Material.cpp  Material.h  Render.cpp  Render.h  RenderBaseMesh.cpp  RenderBaseMesh.h  RenderFont.cpp  RenderFont.h  RenderFontMesh.cpp  RenderFontMesh.h  RenderLight.cpp  RenderLight.h  RenderMain.cpp  RenderMain.h  RenderMesh.cpp  RenderMesh.h  RenderQueue.cpp  RenderQueue.h  RenderScene.cpp  RenderScene.h  RenderSkyBox.cpp  RenderSkyBox.h  RenderStage.cpp  RenderStage.h  RenderUIMesh.cpp  RenderUIMesh.h  RenderUIQueue.cpp  RenderUIQueue.h  RenderUIStage.cpp  RenderUIStage.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h
LearnOpenCV/core/render/font/: FontManager.cpp  FontManager.h
LearnOpenCV/core/ui/: UICanvas.cpp  UICanvas.h  UIFont.cpp  UIFont.h  UIImage.cpp  UIImage.h  UITransform.cpp  UITransform.h
LearnOpenCV/core/war/client/: MapClient.cpp  MapClient.h
LearnOpenCV/core/war/map/: HexCoordinates.cpp  HexCoordinates.h  HexMetrics.cpp  HexMetrics.h  Map.cpp  Map.h  MapBlock.cpp  MapBlock.h  MapCell.cpp  MapCell.h
LearnOpenCV/libraries/: CMakeLists.txt
LearnOpenCV/libraries/src/: CMakeLists.txt
LearnOpenCV/libraries/src/FreeImage/: CMakeLists.txt  import.cmake
LearnOpenCV/libraries/src/FreeImage/include/: FreeImage.h
LearnOpenCV/libraries/src/FreeImage/src/: CMakeLists.txt  FreeImage.h
LearnOpenCV/libraries/src/FreeImage/src/DeprecationManager/: CMakeLists.txt
LearnOpenCV/libraries/src/FreeImage/src/FreeImage/: BitmapAccess.cpp  CMakeLists.txt  GetType.cpp  Plugin.cpp  PluginJPEG.cpp  PluginPNG.cpp  PluginWebP.cpp
LearnOpenCV/libraries/src/FreeImage/src/FreeImageToolkit/: CMakeLists.txt  ClassicRotate.cpp
LearnOpenCV/libraries/src/FreeImage/src/LibJPEG/: CMakeLists.txt
LearnOpenCV/libraries/src/FreeImage/src/LibMNG/: CMakeLists.txt
LearnOpenCV/libraries/src/FreeImage/src/LibOpenJPEG/: CMakeLists.txt
LearnOpenCV/libraries/src/FreeImage/src/LibPNG/: CMakeLists.txt  pngrutil.c
LearnOpenCV/libraries/src/FreeType/: CMakeLists.txt
LearnOpenCV/libraries/src/FreeType/src/: CMakeLists.txt
LearnOpenCV/libraries/src/RapidXml/include/: rapidxml.hpp
LearnOpenCV/libraries/src/cpr/src/: CMakeLists.txt  connect_timeout.cpp  error.cpp  session.cpp  timeout.cpp  xfer_info.cpp
LearnOpenCV/libraries/src/curl/: CMakeLists.txt  import.cmake
LearnOpenCV/libraries/src/curl/src/: CMakeLists.txt  Makefile.inc.cmake
LearnOpenCV/libraries/src/g3log/src/: CMakeLists.txt  crashhandler_unix.cpp  crashhandler_windows.cpp  execinfo_android.c.temp  execinfo_android.h  g3log.cpp  generated_definitions.hpp  logcapture.cpp  loglevels.cpp  logmessage.cpp  stacktrace_windows.cpp
LearnOpenCV/libraries/src/glm/: CMakeLists.txt
LearnOpenCV/libraries/src/lua/: CMakeLists.txt  Makefile
LearnOpenCV/libraries/src/lua/include/: lauxlib.h  lua.h  luaconf.h
LearnOpenCV/libraries/src/lua/src/: CMakeLists.txt  lapi.c  lauxlib.c  lbaselib.c  ldump.c  lmathlib.c  loslib.c  ltablib.c  lua.vcxproj  lua.vcxproj.filters  lundump.c  print.c  wmain.c
LearnOpenCV/libraries/src/openssl/lib/: libssl.lib
LearnOpenCV/libraries/src/raknet/src/: CCRakNetSlidingWindow.cpp  CMakeLists.txt  FileList.cpp  NatTypeDetectionCommon.cpp  RakNetSocket2.cpp  RakNetSocket2_Windows_Linux_360.cpp  RakPeer.cpp  RakString.cpp  ReadMe.txt  ReliabilityLayer.cpp  ReplicaManager3.cpp  build_linux_raknet.sh
LearnOpenCV/libraries/src/zip/: CMakeLists.txt  cmake-config.h.in
LearnOpenCV/libraries/src/zip/include/: config.h  config_android.h  config_ios.h  config_win32.h  zipconf.h
LearnOpenCV/libraries/src/zip/src/: CMakeLists.txt
LearnOpenCV/libraries/src/zippp/include/: libzippp.h
LearnOpenCV/libraries/src/zippp/src/: CMakeLists.txt  libzippp.cpp
LearnOpenCV/libraries/src/zlib/: CMakeLists.txt  import.cmake
LearnOpenCV/libraries/src/zlib/src/: CMakeLists.txt
(+119 files in other folders)
